create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2409,30 +2409,13 @@ body {
     flex-shrink: 0;
   }
 }
-.cid-qtGl8eFuWv {
+.cid-qtGwZTuGAb {
   padding-top: 120px;
-  padding-bottom: 0px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-qtGl8eFuWv h3 {
-  text-align: center;
-}
-.cid-qtGl8eFuWv .mbr-section-subtitle {
+.cid-qtGwZTuGAb .mbr-section-subtitle {
   color: #767676;
-  font-weight: 300;
-}
-.cid-qtGl8eFuWv .mbr-content-text {
-  color: #767676;
-}
-.cid-qtGl8eFuWv .panel-item {
-  background: #ffffff;
-}
-.cid-qtGl8eFuWv .card {
-  word-wrap: break-word;
-}
-.cid-qtGl8eFuWv .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
 }
 .cid-qtGoBbi8fm {
   padding-top: 0px;
