cambio de color texto slides

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1961,7 +1961,8 @@ body {
   z-index: auto;
 }
 .cid-qtFwTviwKg H2 {
-  color: #767676;
+    color: crimson;
+  font-weight: 400;
 }
 .cid-qtFwTviwKg P {
   color: #232323;
