--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1787,8 +1787,8 @@ body {
   left: 0;
   display: flex;
   align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-70px);
+  transform: translateY(-70px);
 }
 .cid-qtFwTviwKg .mbr-overlay {
   z-index: 1;
