--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -59,12 +59,67 @@ body {
 /* 100vw - current viewport width */
 /* (48 - 20)  48 == 48rem == 768px, 20 == 20rem == 320px(minimal supported viewport) */
 /* 0.65 - min scale variable, may vary */
-@media (max-width: 768px) {
-  .display-1 {
-    font-size: 3.4rem;
-    font-size: calc( 2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
+@media (max-height: 1000px){
+  .carousel-caption {
+    -webkit-transform: translateY(-40%) !important;
+    transform: translateY(-40%)  !important;
   }
+}
+@media (max-height: 950px){
+  .carousel-caption {
+    -webkit-transform: translateY(-20%) !important;
+    transform: translateY(-20%)  !important;
+  }
+}
+@media (max-height: 900px){
+  .carousel-caption {
+    -webkit-transform: translateY(0%) !important;
+    transform: translateY(0%)  !important;
+  }
+}
+@media (max-height: 850px){
+  .carousel-caption {
+    -webkit-transform: translateY(20%) !important;
+    transform: translateY(20%)  !important;
+  }
+}
+@media (max-height: 800px){
+  .carousel-caption {
+    -webkit-transform: translateY(40%) !important;
+    transform: translateY(40%)  !important;
+  }
+}
+@media (max-height: 750px){
+  .carousel-caption {
+    -webkit-transform: translateY(60%) !important;
+    transform: translateY(60%)  !important;
+  }
+}
+@media (max-height: 700px){
+  .carousel-caption {
+    -webkit-transform: translateY(80%) !important;
+    transform: translateY(80%)  !important;
+  }
+}
+@media (max-height: 650px){
+  .carousel-caption {
+    color: green !important;
+    -webkit-transform: translateY(100%) !important;
+    transform: translateY(100%)  !important;
+  }
+}
+
+
+
+
+
+
+@media (max-width: 768px) {
+   .display-1 {  
+    font-size: 1.4rem;
+    font-size: calc( 2.1374999999999997rem + (3.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20)));
+  }
+    
   .display-2 {
     font-size: 2.4rem;
     font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
@@ -76,9 +131,8 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.3rem;
+    font-size: calc( 1.3rem * ((100vw - 20rem) / (48 - 20)));
   }
 }
 /* Buttons */
